--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
   "name": "my-monorepo",
-  "packageManager": "yarn@4.2.1"
+  "version": "1.0.0",
+  "private": true,
+  "workspaces": [
+    "packages/*",
+    "apps/*"
+  ],
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
